index.css
html, body {
	padding: 0;
	margin: 0;
	font-size: 12px;
	font-family: Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif;
	-webkit-user-select: none;
	box-sizing: border-box;
	cursor: default;
	height: 100%;
}

#container {
	height: 100%;
}

.patch {
	font-family: "Lucida Console", Monaco, monospace;
	margin: 0;
	display: table;
	width: 100%;
	tab-size: 4;

	border-radius: 0.6em;
	border-width: 2px;
	border-color: #dedede;
	border-style: solid;

	padding: 8px;
	margin-top: 1em;
	margin-bottom: 2em;
	box-sizing: border-box;
}

.patch .hunk {
	background-color: #ececec;
}

.patch table {
	border-collapse:collapse;
}

.patch tr:first-child td:nth-child(-n+2) {
	border-width: 1px 1px 0 1px;
}

.patch tr:last-child td:nth-child(-n+2) {
	border-width: 0 1px 1px 1px;
}

.patch td:nth-child(-n+2) {
	border-width: 0 1px 0 1px;
	border-color: #dddddd;
	border-style: solid;

	background-color: #ececec;
	text-align: right;
}

.patch td:nth-child(4) {
	white-space: pre;
	width: 100%;
}

.patch .new td:nth-child(n+3) {
	background-color: #ddffdd;
	color: #06772c;
}

.patch .old td:nth-child(n+3) {
	background-color: #ffeeee;
	color: #bb0704;
}

.patch .selected td:nth-child(n+3) {
	background-color: #b7d6fb;
}

.patches {
	position: relative;
}

.patches .button {
	position: absolute;
	right: 14px;
	border: 1px solid #34426b;
	padding: 0px 2px 1px 2px;
	font-size: 80%;
	background-color: #d4ebff;
	border-radius: 3px;
	color: #34426b;
	display: none;
}

.patches .button:hover {
	background-color: #8db9df;
}

.patches .button.show {
	display: block;
}

.client-view {
	display: flex;
	flex-flow: row nowrap;
	box-sizing: border-box;
	position: absolute;
	width: 100%;
	height: 100%;
	overflow: hidden;
}

.client-view.stage-mode .history-splitter {
	display: none;
}

.client-view.history-mode .stage-splitter {
	display: none;
}

.diff-view {
	padding: 5px;
	overflow: auto;
}

.refs-view {
	flex: 0 0 auto;
	padding: 5px;
	max-width: 30vw;
	min-width: 15rem;
	background-color: #eef1f1;
	border-right: 1px solid #d5d5d5;
	display: flex;
	flex-flow: column nowrap;
}

.refs-view .refs-sect {
	flex: 1 1 auto;
	overflow: auto;
}

.show-recent path {
	fill: #00000;
}

.nav-buttons {
	flex: 0 0 auto;
}

.nav-buttons button {
	padding: 1px;
}

.nav-buttons svg {
	vertical-align: middle;
	height: 1.2em;
}

.refs-view .stage {
	background-image: url(assets/stage.svg);
	background-position: left center;
	background-repeat: no-repeat;
	padding-left: 1.5em;
	margin-left: 0.5rem;
}

.refs-view .local-branch {
	flex: 0 0 auto;
	background-image: url(assets/branch.svg);
	background-position: left center;
	background-repeat: no-repeat;
	padding-left: 1.5em;
	margin-left: 0.5rem;
}

.refs-view .remote-header svg {
	height: 1em;
	vertical-align: middle;
}

.refs-view .remote-section.hidden .close-arrow {
	display: inherit;
}

.refs-view .remote-section.hidden .open-arrow {
	display: none;
}

.refs-view .remote-section .close-arrow {
	display: none;
}

.refs-view .remote-section.hidden .remote-line {
	display: none;
}

.refs-view .remote-name {
	flex: 0 0 auto;
	background-image: url(assets/cloud.svg);
	background-position: left center;
	background-repeat: no-repeat;
	padding-left: 1.5em;
}

.refs-view .remote-branch {
	flex: 0 0 auto;
	background-image: url(assets/branch.svg);
	background-position: left center;
	background-repeat: no-repeat;
	padding-left: 1.5em;
	margin-left: 1.0rem;
}

.refs-view .active-ref .active-badge {
	flex: 1 1 auto;
	background-image: url(assets/active.svg);
	background-position: right center;
	background-repeat: no-repeat;
	min-width: 2em;
}

.refs-view .remote-header {
	display: flex;
	flex-flow: row nowrap;
}

.refs-view .branch-line {
	display: flex;
	flex-flow: row nowrap;
}

.refs-view .title {
	font-variant: small-caps;
	font-weight: bold;
	margin-bottom: 0.2rem;
}

.refs-view .section {
	margin-bottom: 0.5rem;
}

.refs-view .selected {
	background-color: #ccd7da;
}

.refs-view .remote-line {
	display: flex;
	flex-flow: row nowrap;
}

.refs-view .stage-line, .refs-view .branch-line, .refs-view .remote-line, .refs-view .remote-header {
	padding: 2px;
}

.splitter-view {
	display: flex;
	flex-flow: column nowrap;
	flex: 1 1 auto;
}

.splitter-top {
	flex: 1 1 auto;
	overflow: auto;
}

.splitter-bottom {
	flex: 0 0 auto;
}

.splitter-bar {
	flex: 0 0 auto;
	background: linear-gradient(#fcfcfc, #e0e0e0);
	height: 5px;

	border-top: 1px solid;
	border-bottom: 1px solid;
	border-color: #a8a8a8;
	padding: 1px;
	cursor: row-resize;
}

.splitter-bar:hover, .splitter-bar.dragged {
	background: linear-gradient(#ddd, #bbb);
}

.splitter-dot {
	width: 4.5px;
	height: 4.5px;
	border-radius: 50%;
	margin: auto;
	background: linear-gradient(#afafaf, #cfcfcf);
	flex: 0 0 auto;
}

.splitter-dot:hover, .splitter-bar:hover .splitter-dot, .hsplitter-bar:hover .splitter-dot, .dragged .splitter-dot {
	background: linear-gradient(#ddd, #fff);
}

.index-view {
	display: flex;
	flex-flow: row nowrap;
	height: 100%;
}

.index-view > div {
	background-color: #ededed;
}

.hsplitter-bar {
	flex: 0 0 auto;
	height: 100%;
	width: 5px;

	padding: 1px;
	cursor: col-resize;

	display: flex;
	flex-flow: column nowrap;
}

.hsplitter-bar:hover, .hsplitter-bar.dragged {
	background-color: #ddd;
}

.hsplitter-bar .gap {
	flex: 1 1 auto;
}

.index-view .working-files {
	flex: 0 0 auto;
	display: flex;
	flex-flow: column nowrap;
}

.file-list svg {
	height: 0.9em;
	vertical-align: middle;
}

.file-list .status-M path {
	fill: #00df49;
	stroke-width: 1px;
	stroke: #086a2d;
}

.file-list .status-U path {
	fill: #94e000;
	stroke-width: 1px;
	stroke: #628622;
}

.file-list .status-D path {
	fill: #e01a00;
	stroke-width: 1px;
	stroke: #863022;
}

.file-list .status-D.unmerged path {
	fill: #dd00e0;
	stroke-width: 1px;
	stroke: #862285;
}

.file-list .status-A path {
	fill: #0054e0;
	stroke-width: 1px;
	stroke: #224586;
}

.file-list .status-A.unmerged path {
	fill: #00e0d3;
	stroke-width: 1px;
	stroke: #228683;
}

.file-list .status-R path {
	fill: #b800e0;
	stroke-width: 1px;
	stroke: #772286;
}

.file-list .status-C path {
	fill: #b800e0;
	stroke-width: 1px;
	stroke: #772286;
}

.file-list path {
	fill: #000000;
	stroke-width: 1px;
	stroke: #080808;
}

.file-list path.flap {
	fill: white;
}

.index-view .index-header {
	flex: 0 0 auto;
	padding-left: 6px;
	padding-top: 3px;
	padding-bottom: 3px;
}

.index-view .unstaged, .index-view .staged, .index-view .message {
	flex: 1 1 auto;
	background-color: white;
	border-width: 1px;
	border-color: #bbb;
	border-style: solid;
}

.multi-file-view {
	display: flex;
	flex-flow: column nowrap;
}

.multi-file-view .file-list {
	flex: 1 1 auto;
	background-color: white;
	border-width: 1px;
	border-color: #bbb;
	border-style: solid;
	overflow: auto;
	outline-color: #888;
}

.multi-file-view .file-item.selected {
	background-color: #0b82f5;
	color: white;
}

.index-view .unstaged {
	border-left: 0;
}

.index-view .commit-message {
	flex: 1 1 auto;
	display: flex;
	flex-flow: column nowrap;
	box-sizing: border-box;
}

.index-view .message {
	box-sizing: border-box;
	outline-color: #888;
	resize: none;
}

.index-view .commit-buttons {
	vertical-align: middle;
	padding-top: 9px;
	padding-bottom: 9px;
}

.index-view .commit-button {
	float: right;
}

.index-view .index-files {
	flex: 0 0 auto;
	display: flex;
	flex-flow: column nowrap;
}

.history-view {
	display: flex;
	flex-flow: column nowrap;
	box-sizing: border-box;
}

.history-view .header {
	flex: 0 0 auto;
	padding-right: 16px;
	border-bottom: solid #d8d8d8 1px;
	padding-top: 2px;
}

.history-view .wrapper td {
	padding: 0;
}

.history-view table .short-hash {
	padding-left: 4px;
}

.history-view .wrapper {
	flex: 1 1 auto;
	overflow: auto;
}

.history-view .wrapper tr:nth-child(2n) {
	background-color: #f4f4f4;
}

.history-view svg {
	vertical-align: middle;
	height: 1.65em;
}

.history-view .commit-line {
	width: 98%;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.history-view .commit-line span {
	margin-left: 4px;
}

.history-view .wrapper tr.focus {
	background-color: #096ed3;
	color: #ffffff;
}

.history-view td, .history-view th {
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
}

.history-view th {
	text-align: left;
	font-weight: normal;
}

.history-view table {
	width: 100%;
	table-layout: fixed;
	border-collapse:collapse;
}

.history-view .short-hash {
	width: 6em;
}

.history-view .date {
	width: 14em;
}

.history-view .author {
	width: 9em;
}

.history-view table td.short-hash {
	font-family: "Lucida Console", Monaco, monospace;
}

.history-view .graph-path {
	fill: none;
	stroke-width: 2px;
	stroke: #ee2e2b;
}

.history-view .graph-node {
	fill: #ffffff;
	stroke-width: 1px;
	stroke: #000000;
}

.history-view .graph-leg {
	fill: none;
	stroke-width: 2px;
	stroke: #ee2e2b;
}

.history-view .commit-ref {
	padding-left: 4px;
	padding-right: 4px;
	border-style: solid;
	border-width: 0px;
	border-radius: 5px;
	background-color: #fefb57;
	color: black;
	box-shadow: 0.5px 0.5px 1px 1px #555;
}

.history-view .commit-ref.heads {
	background-color: #fdb672;
}

.history-view .commit-ref.remotes {
	background-color: #b3daf0;
}

.history-view .commit-ref.tags {
	background-color: #fcee94;
}

.commit-view {
	overflow: auto;
}

.commit-view .commit-info {
	display: flex;
	flex-flow: row wrap;
	margin: 1em 1em 0 1em;
	border-bottom: solid #dfdfdf 1px;
	border-collapse:collapse;
}

.commit-view .commit-info > table {
	flex: 0 0 auto;
	margin: 0 2em 0 1em;
}

.commit-info .label {
	text-align: right;
	font-weight: bold;
	color: #838394;
}

.commit-info .subject .info {
	font-weight: bold;
	max-width: 30em;
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
}

.commit-info .identity .info {
	font-family: "Lucida Console", Monaco, monospace;
}

.commit-info .parent .info {
	color: #1a54ab;
}

.commit-info .parent .info:hover {
	text-decoration: underline;
}

.commit-summary {
	margin: 1em;
	margin-bottom: 0;
}

.commit-summary .message {
	white-space: pre;
	font-family: "Lucida Console", Monaco, monospace;
	margin: 1.5em 0 1.4em 0;
}

.commit-summary .file {
	color: #6a6a6a;
	margin-left: 2em;
}

.commit-summary .file:hover {
	color: #6a6a6a;
	color: #1a54ab;
	text-decoration: underline;
}

.commit-view .diff-view {
	margin-left: 0.5em;
	margin-right: 0.5em;
}

.recent-repos {
	box-sizing: border-box;
	margin-left: auto;
	margin-right: auto;
	padding: 10vh 0 10vh 0;
	max-width: 40em;
	height: 100vh;
}

.recent-repos .repo-list {
	box-sizing: border-box;
	margin: 5vh 0 10vh 0;
	padding: 3px 6px 3px 6px;
	border-radius: 0.6em;
	border-width: 2px;
	border-color: #dedede;
	border-style: solid;
	overflow: auto;
	height: 60vh;
}

.recent-repos .repo-button {
	box-sizing: border-box;
	height: 10vh;
	text-align: center;
}

.recent-repos .repo-item {
	border-radius: 0.4em;
	border-width: 1px;
	border-color: #dedede;
	border-style: solid;
	background: linear-gradient(#fcfcfc, #e0e0e0);
	margin-bottom: 4px;
	margin-top: 4px;
	text-align: center;
	padding: 3px;
}

.recent-repos .repo-item:hover {
	padding: 2px;
	border-width: 2px;
	border-color: #cdcdcd;
}

.recent-repos .repo-name {
	font-weight: bold;
	font-size: 1.2em;
	padding-bottom: 5px;
}

.recent-repos .repo-path {
	font-size: 0.9em;
	color: #888888;
}

.recent-repos .no-recent {
	display: none;
	font-size: 2em;
	text-align: center;
	margin-top: 25vh;
}

.recent-repos .all-items:empty + .no-recent {
	display: block;
}

